welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:55: error: Unmatched closing brace '}' ignored here
}
^